@@ -51,21 +51,21 @@ class APIBrowser(ViewportPlugin):
     self.plugin_area.add(vbox)
     top_hbox = gtk.HBox()
     bottom_hbox = gtk.HBox()
-    vbox.pack_start(top_hbox)
-    vbox.pack_start(bottom_hbox, False)
+    vbox.pack_start(top_hbox, False)
+    vbox.pack_start(bottom_hbox)
     self.method_tree = gtk.TreeView()
     scrolled_window = gtk.ScrolledWindow()
     scrolled_window.add(self.method_tree)
-    top_hbox.pack_start(scrolled_window)
+    bottom_hbox.pack_start(scrolled_window)
     self.property_tree = gtk.TreeView()
     scrolled_window = gtk.ScrolledWindow()
     scrolled_window.add(self.property_tree)
-    top_hbox.pack_start(scrolled_window)
+    bottom_hbox.pack_start(scrolled_window)
     self.iface_combo = gtk.combo_box_new_text() 
-    bottom_hbox.pack_start(self.iface_combo, False)
+    top_hbox.pack_start(self.iface_combo, False)
     self.private_toggle = gtk.CheckButton(_('Hide private attributes'))
     self.private_toggle.set_active(True)
-    bottom_hbox.pack_end(self.private_toggle, False)
+    top_hbox.pack_end(self.private_toggle, False)
     self.show_all()
     
   def _initTreeViews(self):
