@@ -1,3 +1,12 @@
+2008-02-28  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/event_monitor.py: Make hyperlinks work with single
+	clicks (bug #494632). Thanks Steve Lee and Brian G. Merrell!
+	* plugins/api_view.py: Put interface combo box on tob (bug
+	#493650). Thanks Brian G. Merrell!
+	* plugins/interface_view.py: Swapped absolute and relative
+	positions in Component section (bug #503654).
+	
 2008-02-10  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/Makefile.am: Removed pyatspi.zip
